--- a/css/chat.css
+++ b/css/chat.css
@@ -296,14 +296,15 @@ body {
       display: none;
     }
   }
-  #frame #sidepanel #search label {
-    position: absolute;
+  #frame #sidepanel #search a {
     margin: 10px 0 0 20px;
+    width: 15%;
+    position: absolute;
   }
   #frame #sidepanel #search input {
     font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
     padding: 10px 0 10px 46px;
-    width: calc(100% - 25px);
+    width: 85%;
     border: none;
     background: #32465a;
     color: #f5f5f5;
@@ -349,7 +350,7 @@ body {
   #frame #sidepanel #contacts::-webkit-scrollbar-thumb {
     background-color: #243140;
   }
-  #frame #sidepanel #contacts ul li.contact {
+  li.contact {
     position: relative;
     padding: 10px 0 15px 0;
     font-size: 0.9em;
@@ -360,7 +361,7 @@ body {
       padding: 6px 0 46px 8px;
     }
   }
-  #frame #sidepanel #contacts ul li.contact:hover {
+  #contacts ul li.contact:hover {
     background: #32465a;
   }
   #frame #sidepanel #contacts ul li.contact.active {
@@ -370,10 +371,18 @@ body {
   #frame #sidepanel #contacts ul li.contact.active span.contact-status {
     border: 2px solid #32465a !important;
   }
-  #frame #sidepanel #contacts ul li.contact .wrap {
+  ul li.contact .wrap {
     width: 88%;
     margin: 0 auto;
     position: relative;
+  }
+  .modal-body .contact {
+    height: 60px;
+  }
+  .modal-body .contact:hover {
+    border-color: black;
+    border: 1px solid;
+    border-radius: 3px;
   }
   @media screen and (max-width: 735px) {
     #frame #sidepanel #contacts ul li.contact .wrap {
@@ -399,7 +408,7 @@ body {
   #frame #sidepanel #contacts ul li.contact .wrap span.busy {
     background: #e74c3c;
   }
-  #frame #sidepanel #contacts ul li.contact .wrap img {
+  ul li.contact .wrap img {
     width: 40px;
     border-radius: 50%;
     float: left;
@@ -418,7 +427,7 @@ body {
       display: none;
     }
   }
-  #frame #sidepanel #contacts ul li.contact .wrap .meta .name {
+  ul li.contact .wrap .meta .name {
     font-weight: 600;
   }
   #frame #sidepanel #contacts ul li.contact .wrap .meta .preview {
@@ -450,13 +459,18 @@ body {
   #frame #sidepanel #bottom-bar button {
     float: left;
     border: none;
-    width: 50%;
     padding: 10px 0;
     background: #32465a;
     color: #f5f5f5;
     cursor: pointer;
     font-size: 0.85em;
     font-family: "proxima-nova",  "Source Sans Pro", sans-serif;
+  }
+  #addcontact, #newmessage {
+    width: 45%;
+  }
+  #settings {
+    width: 10%;
   }
   @media screen and (max-width: 735px) {
     #frame #sidepanel #bottom-bar button {
@@ -524,6 +538,11 @@ body {
     float: left;
     margin: 9px 12px 0 9px;
   }
+  .modal-body #profile-img {
+    width: 80px;
+    border-radius: 50%;
+    display: block;
+  }
   #frame .content .contact-profile p {
     float: left;
   }
@@ -580,6 +599,10 @@ body {
   #frame .content .messages ul li.replies img {
     float: right;
     margin: 6px 0 0 8px;
+  }
+  small {
+    font-size: smaller;
+    color: #95a5a6;
   }
   #frame .content .messages ul li.replies p {
     background: #f5f5f5;
